# quill-demo

./: README.md
backend/: app.py  pyproject.toml
js-frontend/: quill.js
python-frontend/: app.py  pyproject.toml
python-frontend/static/: index.html  style.css  worker.js  worker.py  y_py-0.5.5-cp310-cp310-emscripten_3_1_14_wasm32.whl
